add docs folder

--- a/docs/01_set_up_dev_env/0103.md
+++ b/docs/01_set_up_dev_env/0103.md
@@ -1,8 +1,8 @@
 ---
-name: '3. Deploy a Microsoft Dev Box'
-layout: docs
-# nav_order: 3
-# parent: 'Exercise 01: Set up development environment'
+title: '3. Deploy a Microsoft Dev Box'
+layout: default
+nav_order: 3
+parent: 'Exercise 01: Set up development environment'
 ---
 
 # Task 03 - Deploy a Microsoft Dev Box (10 minutes)
